minor proof typo fixed

--- a/Homework1/22110089_Homework1.ipynb
+++ b/Homework1/22110089_Homework1.ipynb
@@ -24,7 +24,7 @@
     "#### $\\implies d(\\hat{x_i} | x_i) \\le d(\\hat{x_i} | c_i) + d(x_i | c_i) \\le 2 \\times d(x_i | c_i)$ ($\\because$ Triangle Inequality) \n",
     "#### $\\implies d(\\hat{x_i} | x_i)^2 \\le 4 \\times d(x_i | c_i)^2$ \n",
     "#### Sum this over all $x_i \\in C_i$ \n",
-    "#### $\\underset{x \\in c_i}{\\operatorname{\\sum}} d(\\hat{x_i} | x_i)^2 \\le 4 \\times \\underset{x \\in c_i}{\\operatorname{\\sum}} d(\\hat{x_i} | c_i)^2$ \n",
+    "#### $\\underset{x \\in c_i}{\\operatorname{\\sum}} d(\\hat{x_i} | x_i)^2 \\le 4 \\times \\underset{x \\in c_i}{\\operatorname{\\sum}} d(x_i | c_i)^2$ \n",
     "#### $\\implies \\text{cost}(C_i, \\hat{x_i}) \\le 4 \\times \\text{cost}(C_i, c_i)$ \n",
     "#### Sum this over all clusters $C_i$ \n",
     "#### $\\underset{i}{\\operatorname{\\sum}} \\text{cost}(C_i, \\hat{x_i}) \\le 4 \\times \\underset{i}{\\operatorname{\\sum}} \\text{cost}(C_i, c_i)$ \n",
